--- a/index.html
+++ b/index.html
@@ -12,14 +12,34 @@
 
   <div class="clock">
     <div class="clock-face">
-      <div class="hand hour-hand"></div>
-      <div class="hand min-hand"></div>
-      <div class="hand second-hand"></div>
+      <div class="hourHand hour-hand"></div>
+      <div class="minuteHand min-hand"></div>
+      <div class="secondHand second-hand"></div>
     </div>
   </div>
 
   <script>
+    const secondHand = document.querySelector(".second-hand")
+    const minuteHand = document.querySelector(".min-hand")
+    const hourHand = document.querySelector(".hour-hand")
 
+    function setDate() {
+      const date = new Date();
+
+      const seconds = date.getSeconds();
+      const secondsDegree = ((seconds / 60) * 360) + 90;
+      secondHand.style.transform = `rotate(${secondsDegree}deg)`
+      
+      const minute = date.getMinutes();
+      const minutesDegree = ((minute/60) * 360) + 90;
+      minuteHand.style.transform = `rotate(${minutesDegree}deg)`
+
+      const hour = date.getHours();
+      const hourDegree = ((hour / 12) * 360) + ((minute/60) * 30);
+      hourHand.style.transform = `rotate(${hourDegree}deg)`
+    }
+
+    setInterval(setDate, 1000)
 
   </script>
 </body>
